--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,24 +5,50 @@ name: .NET
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Restore dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --no-restore
+      - name: Test
+        run: dotnet test --no-build --verbosity normal
+
+  k6:
+    runs-on: ubuntu-latest
+
+    services:
+      bookservice:
+        image: semwenders/bookedsocial service:latest
+        ports:
+          - 8080:8080
+          - 8081:8081
+        env:
+          ApplicationSettings:Neo4jConnection: mongodb://mongodb:27017
+      neo4j:
+        image: ./Dockerfile
+        ports:
+          - 7687:7687
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run
+        uses: grafana/k6-action@v0.3.1
+        with:
+          filename: LoadTest/scripts/GetBookInfo.js
+        env:
+          HOST_URL: "http://socialservice:8080"
