--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
 
     services:
       bookservice:
-        image: semwenders/bookedsocial service:latest
+        image: semwenders/bookedsocialservice:latest
         ports:
           - 8080:8080
           - 8081:8081
