fixed service name

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,7 +53,7 @@ jobs:
     needs: docker
 
     services:
-      bookservice:
+      socialservice:
         image: semwenders/bookedsocialservice:latest
         ports:
           - 8080:8080
