--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -2,8 +2,12 @@ FROM neo4j:enterprise
 
 ENV NEO4J_ACCEPT_LICENSE_AGREEMENT yes
 
-COPY my-entrypoint.sh /my-entrypoint.sh
-COPY /data /import
-RUN chmod +x /my-entrypoint.sh
+COPY extension_script.sh /extension_script.sh
+COPY second-script.sh /second-script.sh
+COPY data/users.csv /import/users.csv
+COPY data/friends.csv /import/friends.csv
+COPY entities.cql /entities.cql
+COPY relationships.cql /relationships.cql
 
-ENTRYPOINT [ /my-entrypoint.sh ]
+ENV NEO4J_AUTH=neo4j/password
+ENV EXTENSION_SCRIPT=/extension_script.sh
