--- a/SocialServiceAPI/appsettings.json
+++ b/SocialServiceAPI/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
   "ApplicationSettings": {
     "Neo4jConnection": "neo4j://localhost:7687",
-    "Neo4jUser": "socialservice",
-    "Neo4jPassword": "socialservice1",
+    "Neo4jUser": "neo4j",
+    "Neo4jPassword": "password",
     "Neo4jDatabase": "neo4j"
   }
 }
