--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -72,9 +72,27 @@ jobs:
           dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
-  docker:
+          runs-on: ubuntu-latest
+          steps:
+            - uses: actions/checkout@master
+            - name: Run Snyk to check for vulnerabilities
+              uses: snyk/actions/dotnet@master
+              env:
+                SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+  snyk:
     runs-on: ubuntu-latest
     needs: sonarqube
+    steps:
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/dotnet@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: snyk
 
     steps:
       - name: Checkout
